feat: application menu on recruiters dashboard
